--- a/tonystark.html
+++ b/tonystark.html
@@ -3,54 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tony Stark - Железният човек</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Tony Stark</title>
+    <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
     <header>
-        <h1>Tony Stark</h1>
+        <h1><a href="https://youtu.be/JcbCZWP6RPI?t=25" class="button">Tony Stark</a></h1>
         <nav>
             <ul>
-                <li><a href="#biography">Биография</a></li>
-                <li><a href="#facts">Интересни факти</a></li>
-                <li><a href="#gallery">Галерия</a></li>
-                <li><a href="#quotes">Цитати</a></li>
+                <li><a href="Untitled-1.html">Начална страница</a></li>
+                <li><a href="Untitled-2.html">Биография</a></li>
+                <li><a href="Untitled-3.html">Интересни факти</a></li>
+                <li><a href="Untitled-4.html">Галерия</a></li>
+                <li><a href="Untitled-5.html">За актьора</a>
+                <li><a href="Untitled-6.html">Цитати</a></li>
+                <li><a href="Untitled-7.html">Контакт</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
-        <section id="biography">
-            <h2>Биография</h2>
-            <p>Тони Старк е гениален изобретател, милиардер и супергерой, известен като Железния човек. Неговата арогантност и чар са толкова големи, колкото и интелектът му. След като е отвлечен, Тони създава броня, която го превръща в Железния човек, и започва да се бори срещу злото, използвайки технологиите си.</p>
-        </section>
-
-        <section id="facts">
-            <h2>Интересни факти</h2>
-            <ul>
-                <li>Тони Старк е създал множество костюми на Железния човек, всеки с различни функции.</li>
-                <li>Той е част от Отмъстителите - екип от супергерои.</li>
-                <li>Изпълнителният директор на Stark Industries, една от най-мощните технологични компании.</li>
-            </ul>
-        </section>
-
-        <section id="gallery">
-            <h2>Галерия</h2>
-            <figure>
-                <img src="Iron_Man_Infobox.webp" alt="Tony Stark in Iron Man Suit" width="200" heigth="500">
-                <figcaption>Тони Старк в костюма на Железния човек</figcaption>
-            </figure>
-        </section>
-
-        <section id="quotes">
-            <h2>Цитати</h2>
-            <blockquote>"I am Iron Man."</blockquote>
-            <blockquote>"Sometimes you gotta run before you can walk."</blockquote>
+        <section id="Main Page">
+            <h2>Начална Страница</h2>
+            <p>Железният човек e измислен супергерой на Марвел Комикс. Негови създатели са Стан Лий, Джак Кърби и Дон Хек. Появява се за пръв път се в Tales of Suspence през март 1963 г. Главният герой в поредицата е богат милиардер на име Тони Старк.</p>
+            <img src="C:\Users\alexi\Downloads\tonkata bate.jfif" alt="Железният Човек" width="500" heigth="300">
         </section>
     </main>
 
     <footer>
-        <p>Написано от Александър Игнатов 10г клас</p>
+        <p>Написано от Александър Игнатов 10г</p>
     </footer>
 </body>
 </html>
